fixed the white line issue on mobile, and made the skeletons in the summoner's page responsive

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,6 +5,8 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  width: 100%;
+  overflow-x:hidden;
   /* background: #121212; */
 }
 
